<resources>
    <string name="app_name">Parkin Go</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_update">Update</string>

    <string name="menu_home">Home</string>
    <string name="menu_parking">Add Parking</string>
    <string name="menu_parking_receipt">View Parking Receipt</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="parking_title">Let\'s Get Your Car Parked!</string>
    <string name="enter_parking">Please Enter Your Parking Information</string>
    <string name="building_code">Building Code</string>
    <string name="parking_hours_prompt">How long would you like to have your car parked for?</string>
    <string name="one_hour">1 hour or less</string>
    <string name="three_hours">3 hours</string>
    <string name="ten_hours">10 hours</string>
    <string name="all_day">24 hours (I\'ve got all day!)</string>
    <string name="your_plate_number">Your Car Plate Number</string>
    <string name="host_suite_number">Suit Number of Host</string>
    <string name="park_car">Park My Car!</string>
    <string name="parking_receipt_title">Here is your parking receipt</string>

    <string name="menu_call">Call</string>
    <string name="menu_email">Email</string>
    <string name="email_us">Email Us</string>
    <string name="message">Got any complaints? Fill out this form and we will respond within 24 hours.</string>
    <string name="your_complaints_concerns">Your Complaints/Concerns</string>
    <string name="call_us">Call Us</string>
    <string name="call_message">Got any complaints? Our customer representatives will be happy to assist you!</string>
    <string name="call_msg_2">Call us now and you\'ll be speaking with us under 30 seconds</string>
    <string name="call_number">(123) 456-7890 </string>
    <string name="or">OR</string>
    <string name="click_here">Click here</string>

    <string name="username">Email</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Not already a member? Sign Up</string>
    <string name="remember">Remember Me</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="fullname">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="email">Email address</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="platenumber">Platenumber</string>
    <string name="update">Update Info</string>
    <string name="card_number">Card Number</string>
    <string name="card_name">Card Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="sign_up">Sign Up</string>
    <string name="park_in_go">Park\'in Go</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="car_plate_number">Car Plate Number</string>
    <string name="cvv">CVV</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome_user">Welcome User</string>
    <string name="building_code_details">%d</string>
    <string name="parking_duration">Parking Duration</string>
    <string name="parking_duration_details">%s</string>
    <string name="car_plate_number">Car Plate Number</string>
    <string name="car_plate_number_details">%s</string>
    <string name="host_suite_number_details">%d</string>
    <string name="parking_date">Date of Parking</string>
    <string name="parking_date_details">%s</string>
    <string name="parking_time">Time of Parking</string>
    <string name="parking_time_details">%s</string>
    <string name="parking_cost">Cost of Parking</string>
    <string name="parking_cost_details">%.2f</string>
    <string name="show_parking_receipts">Show My Parking Receipts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
