<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_layout_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_parking"
            android:icon="@drawable/ic_menu_parking"
            android:title="@string/menu_parking" />
        <item
            android:id="@+id/nav_parking_receipt"
            android:icon="@drawable/ic_menu_parking_receipt"
            android:title="@string/menu_parking_receipt" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Contact Us">
        <menu>
            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_menu_call"
                android:title="@string/menu_call" />
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_menu_email"
                android:title="@string/menu_email" />
        </menu>
    </item>

</menu>
